# portfolio-anonymizer

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  hello.yml
evaluation/: own_benchmark.csv
frontend/: .env.production  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
frontend/src/components/: Benchmark.tsx  Demo.tsx  Methods.tsx  SiteNav.tsx
frontend/src/lib/: Gate.tsx  api.ts  results.ts  samples.ts  types.ts  useGateway.ts
report/: REPORT.md
scripts/: 01_setup.ps1  01_setup.sh  02_run.ps1  02_run.sh  03_serve.ps1  03_serve.sh
src/: anonymize_spacy.py  anonymizer.py  api.py  benchmark.py  configs.py  dataset.py  explore_spacy.py  hf_detector.py  make_charts.py  make_report.py  pipeline.py  regex_detector.py  score_spacy.py  scoring.py  spacy_detector.py
src/anonymizer/: __init__.py  api.py  benchmark.py  charts.py  configs.py  dataset.py  pipeline.py  report.py  scoring.py  warm.py
src/anonymizer/detectors/: __init__.py  _hf.py  gliner_model.py  hf_model.py  hf_ontonotes.py  regex_rules.py  spacy_model.py
tests/: test_api.py  test_configs.py  test_pipeline.py  test_regex_rules.py  test_scoring.py  test_spans.py
