[project]
name = "portfolio-anonymizer"
version = "0.1.0"
description = "Detect and anonymize sensitive entities (PII) in text, and benchmark pre-trained NER models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2",
    "en-core-web-sm",
    "fastapi>=0.139.2",
    "spacy>=3.8.14",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "nbconvert>=7.17.1",
]
