[project]
name = "portfolio-anonymizer"
version = "0.1.0"
description = "Detect and anonymize sensitive entities (PII) in text, and benchmark pre-trained NER models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.4.2",
    "en-core-web-sm",
    "fastapi>=0.139.2",
    "phonenumbers>=9.0.34",
    "python-stdnum>=2.2",
    "spacy>=3.8.14",
    "torch>=2.13.0",
    "transformers>=5.14.1",
    "uvicorn>=0.51.0",
]

[project.scripts]
anonymizer-benchmark = "anonymizer.benchmark:main"
anonymizer-report = "anonymizer.report:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: loads the NER models; excluded from the quick suite that CI runs",
]

[tool.ruff]
line-length = 90
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, import sorting, pyupgrade, and common bug patterns.
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/anonymizer"]

# Inference is CPU-only here, so torch comes from the CPU wheel index. The default
# PyPI wheels bundle the CUDA runtime, which adds gigabytes to the container image
# for hardware this never uses.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "nbconvert>=7.17.1",
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]
